--- a/src/Servers/Kestrel/Core/src/CoreStrings.resx
+++ b/src/Servers/Kestrel/Core/src/CoreStrings.resx
@@ -632,4 +632,7 @@ For more information on configuring HTTPS see https://go.microsoft.com/fwlink/?l
   <data name="EndpointHasUnusedHttpsConfig" xml:space="preserve">
     <value>The non-HTTPS endpoint {endpointName} includes HTTPS-only configuration for {keyName}.</value>
   </data>
+  <data name="MultipleTransportsFound" xml:space="preserve">
+    <value>Found both a ConnectionListenerFactory and a IConnectionListenerFactory. Choose only one.</value>
+  </data>
 </root>
